feat: SET-523 support resend v2 of tessera payload